; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_raid10.c_enough.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_raid10.c_enough.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.r10conf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.r10conf*, i32)* @enough to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enough(%struct.r10conf* %0, i32 %1) #0 {
  %3 = alloca %struct.r10conf*, align 8
  %4 = alloca i32, align 4
  store %struct.r10conf* %0, %struct.r10conf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.r10conf*, %struct.r10conf** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i64 @_enough(%struct.r10conf* %5, i32 0, i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load %struct.r10conf*, %struct.r10conf** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i64 @_enough(%struct.r10conf* %10, i32 1, i32 %11)
  %13 = icmp ne i64 %12, 0
  br label %14

14:                                               ; preds = %9, %2
  %15 = phi i1 [ false, %2 ], [ %13, %9 ]
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local i64 @_enough(%struct.r10conf*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
